--- a/index.html
+++ b/index.html
@@ -25,8 +25,28 @@
             </thead>
             <tbody>
                 <tr>
+                    <td>1</td>
+                    <td>Biglietto Aereo</td>
+                    <td>120&euro;</td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>Biglietto Aereo</td>
+                    <td>120 &euro;</td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>Biglietto Aereo</td>
+                    <td>120 &euro;</td>
                 </tr>
             </tbody>
+            <tfoot>
+                <tr>
+                    <td>Totale</td>
+                    <td></td>
+                    <td>360&euro;</td>
+                </tr>
+            </tfoot>
         </table>
     </main>
     
