--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
 <body>
     <header>
         <h1>Il mio Viaggio a Londra</h1>
+        <div>
         <img src="./img/pexels-bill-emrich-230794-0.jpg" alt="">
         <img src="./img/pexels-bill-emrich-230794-1.jpg" alt="">
         <img src="./img/pexels-bill-emrich-230794-2.jpg" alt="">
+        </div>
         <hr>
     </header>
     <main>
         <h2>Le mie spese</h2>
+        <div>
         <table>
             <thead>
                 <tr>
@@ -48,6 +51,19 @@
                 </tr>
             </tfoot>
         </table>
+        </div>
+        <hr>
+        <h2>Cose da fare</h2>
+        <div>
+            <ul>
+                <li>Visitare la Tower of London &#9746;</li>
+                <li>Visitare Greenwich &#9745;</li>
+                <li>Ascoltare un artista di strada a Covent Garden &#9745;</li>
+                <li>Mangiare il tipico Fish and Chips inglese &#9746;</li>
+            </ul>
+        </div>
+        <hr>
+
     </main>
     
 </body>
