--- a/index.html
+++ b/index.html
@@ -66,25 +66,33 @@
         <h2>Info utili:</h2>
         <div>
             <ol>
-            <li>Numeri utili di emergenza</li>
-                <ul>
+            <li>Numeri utili di emergenza
+                    <ul>
                     <li><strong>999</strong> - Emergenza</li>
                     <li><strong>101</strong> - Numero polizia</li>
                     <li><strong>111</strong> - Numero assistenza medica</li>
-                </ul>
-            <li>Hotel</li>
-                <ul>
+                    </ul>
+            </li>
+            <li>Hotel
+                    <ul>
                     <li><strong>Nome Hotel</strong>:Buckingham Palace</li>
                     <li><strong>Indirizzo Hotel</strong>: Westminster, London SW1A 1AA, Regno Unito</li>
-                </ul>
-            <li>Aereo</li>
-                <ul>
+                    </ul>
+            </li>
+            <li>Aereo
+                    <ul>
                     <li><strong>Volo di Andata</strong>:YI234X, ore 9.30 da Milano Malpensa</li>
                     <li><strong>Volo di Ritorno</strong>:YI236X, ore 18.30 da London Hearthrow</li>
-                </ul>
+                    </ul>
+            </li>
             </ol>
         </div>
         <hr>
+        <h2>Le Foto</h2>
+        <div>
+            <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg" alt="">
+            <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n" alt="">
+        </div>
     </main>
     
 </body>
