Aggiunta di commenti

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <title>Document</title>
 </head>
 <body>
+    <!--parte iniziale dell'articolo-->
     <header>
         <h1>Il mio Viaggio a Londra</h1>
+        <!--div creata per le immagini locali-->
         <div>
         <img src="./img/pexels-bill-emrich-230794-0.jpg" alt="">
         <img src="./img/pexels-bill-emrich-230794-1.jpg" alt="">
@@ -15,8 +17,10 @@
         </div>
         <hr>
     </header>
+    <!--parte principale dell'articolo-->
     <main>
         <h2>Le mie spese</h2>
+        <!--div creata per la tabella-->
         <div>
         <table>
             <thead>
@@ -54,6 +58,7 @@
         </div>
         <hr>
         <h2>Cose da fare</h2>
+        <!--div creata per la lista-->
         <div>
             <ul>
                 <li>Visitare la Tower of London &#9746;</li>
@@ -64,6 +69,7 @@
         </div>
         <hr>
         <h2>Info utili:</h2>
+        <!--div creata per la lista annidata-->
         <div>
             <ol>
             <li>Numeri utili di emergenza
@@ -88,12 +94,16 @@
             </ol>
         </div>
         <hr>
+    </main>
+    <!--parte finale dell'articolo-->
+    <footer>
         <h2>Le Foto</h2>
+        <!--div creata per le immagini source tramite link-->
         <div>
             <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg" alt="">
             <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n" alt="">
         </div>
-    </main>
+    </footer>
     
 </body>
 </html>
