corretto qualche errore di indentazione

--- a/index.html
+++ b/index.html
@@ -9,12 +9,10 @@
     <!--parte iniziale dell'articolo-->
     <header>
         <h1>Il mio Viaggio a Londra</h1>
-        <!--div creata per le immagini locali-->
-        <div>
+        <!--immagini locali-->
         <img src="./img/pexels-bill-emrich-230794-0.jpg" alt="">
         <img src="./img/pexels-bill-emrich-230794-1.jpg" alt="">
         <img src="./img/pexels-bill-emrich-230794-2.jpg" alt="">
-        </div>
         <hr>
     </header>
     <!--parte principale dell'articolo-->
